# ai-tracker

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml  test_tracker.py  tracker.py
.claude/rules/: conventions.md
.claude/skills/fix-flags/: SKILL.md  resolve.py
.claude/skills/tracker-gap/: SKILL.md
.claude/skills/tracker-push/: SKILL.md
aitracker/: cli.py  config.py  overview.py  page.py  registry.py  server.py  store.py  util.py
aitracker/providers/: auggie.py  base.py  claude.py
aitracker/web/: app.css  app.js  index.html
docs/: remote-access.md
hooks/: pre-commit
scripts/: bundle.py
tests/: test_agent_files.py  test_integration.py  test_narration.py  test_prs.py  test_selfcheck.py  test_tracker.py
