[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-tracker"
description = "Live, local dashboard for AI coding sessions (Claude Code, Auggie, …) — zero runtime dependencies."
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
dynamic = ["version"]

[project.scripts]
ai-tracker = "aitracker.cli:main"

[tool.hatch.version]
path = "aitracker/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["aitracker"]
